added latest change

--- a/.github/workflows/publish_singularity.yml
+++ b/.github/workflows/publish_singularity.yml
@@ -84,7 +84,7 @@ jobs:
       - name: Login and Deploy Container to Github Regsitry
         run: |         
           echo "${{ secrets.GITHUB_TOKEN }}" | singularity registry login -u "${{ secrets.GHCR_USERNAME }}" --password-stdin oras://ghcr.io
-          singularity push singularity-firo-tethys-portal.sif "oras://ghcr.io/$(echo "${GITHUB_REPOSITORY}" | tr '[:upper:]' '[:lower:]'):${GITHUB_SHA:0:7}-x86"          
+          singularity push singularity-firo-tethys-portal.sif oras://ghcr.io/$(echo "${GITHUB_REPOSITORY}" | tr '[:upper:]' '[:lower:]'):${{ github.ref_name }}-x86
 
       - name: Logout from Github Container Registry
         run: |
