--- a/.github/workflows/singularity_dev_publish.yml
+++ b/.github/workflows/singularity_dev_publish.yml
@@ -111,4 +111,4 @@ jobs:
           singularity push container.sif \
           "oras://ghcr.io/$(echo "${GITHUB_REPOSITORY}" \
           | tr '[:upper:]' '[:lower:]' \
-          | sed 's/_/-/g'):${{ env.tag }}-x86"
+          | sed 's/_/-/g')-singularity:${{ env.tag }}-x86"
