updated to apptainer

--- a/dev.env
+++ b/dev.env
@@ -18,9 +18,11 @@ MULTIPLE_APP_MODE=true
 STANDALONE_APP=tethysdash
 TETHYSDASH_DB_NAME=tethysdash_primary_db
 POSTGRES_PASSWORD=pass
-SKIP_DB_SETUP=true
+SKIP_DB_SETUP=false
 BYPASS_TETHYS_HOME_PAGE=false
 THEME_NAME=firo_theme
+
+
 
 #Site config
 SITE_TITLE="FIRO Tethys Portal"
