added some footer from word press to the default theme

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ terraform/envs/prod.tfvars
 .terraform.lock.hcl
 tethys_persist
 firo_tethys_portal_home
+
+custom_themes/tethysext-default_theme/tethysext/default_theme/public/cw3e_ucsd_edu
