reverted to previous

--- a/dev.env
+++ b/dev.env
@@ -28,14 +28,14 @@ BRAND_IMAGE=
 BRAND_IMAGE_HEIGHT=
 BRAND_IMAGE_WIDTH=
 BRAND_IMAGE_PADDING=
-APPS_LIBRARY_TITLE="Dashboards"
+APPS_LIBRARY_TITLE="Tools"
 PRIMARY_COLOR='#1e6b8b'
-SECONDARY_COLOR='#1e6b8b'
+SECONDARY_COLOR='#fd9a07'
 PRIMARY_TEXT_COLOR=
 PRIMARY_TEXT_HOVER_COLOR=
 SECONDARY_TEXT_COLOR=
 SECONDARY_TEXT_HOVER_COLOR=
-BACKGROUND_COLOR='#eaeaea'
+BACKGROUND_COLOR='#ffffff'
 COPYRIGHT="Copyright © 2025 CW3E"
 HERO_TEXT=
 BLURB_TEXT=
@@ -57,7 +57,7 @@ ACCOUNTS_BASE_CSS=
 LOGIN_CSS=
 REGISTER_CSS=
 USER_BASE_CSS=
-HOME_PAGE_TEMPLATE='default_theme/home.html'
+HOME_PAGE_TEMPLATE='/default_theme/templates/default_theme/home.html'
 APPS_LIBRARY_TEMPLATE=
 LOGIN_PAGE_TEMPLATE=
 REGISTER_PAGE_TEMPLATE=
