--- a/dev.env
+++ b/dev.env
@@ -30,12 +30,12 @@ BRAND_IMAGE_WIDTH=
 BRAND_IMAGE_PADDING=
 APPS_LIBRARY_TITLE="Tools"
 PRIMARY_COLOR='#1e6b8b'
-SECONDARY_COLOR='#fd9a07'
-PRIMARY_TEXT_COLOR=
+SECONDARY_COLOR='#1e6b8b'
+PRIMARY_TEXT_COLOR='#1e6b8b'
 PRIMARY_TEXT_HOVER_COLOR=
 SECONDARY_TEXT_COLOR=
 SECONDARY_TEXT_HOVER_COLOR=
-BACKGROUND_COLOR='#ffffff'
+BACKGROUND_COLOR='#eaeaea'
 COPYRIGHT="Copyright © 2025 CW3E"
 HERO_TEXT=
 BLURB_TEXT=
@@ -57,7 +57,7 @@ ACCOUNTS_BASE_CSS=
 LOGIN_CSS=
 REGISTER_CSS=
 USER_BASE_CSS=
-HOME_PAGE_TEMPLATE='/default_theme/templates/default_theme/home.html'
+HOME_PAGE_TEMPLATE='default_theme/home.html'
 APPS_LIBRARY_TEMPLATE=
 LOGIN_PAGE_TEMPLATE=
 REGISTER_PAGE_TEMPLATE=
