styles for home finished

--- a/dev.env
+++ b/dev.env
@@ -37,8 +37,8 @@ SECONDARY_TEXT_COLOR=
 SECONDARY_TEXT_HOVER_COLOR=
 BACKGROUND_COLOR='#eaeaea'
 COPYRIGHT="Copyright © 2025 CW3E"
-HERO_TEXT="FIRO Portal is designed to be customizable, so that you can host apps for your organization. You can change everything on this page from the Home Page settings."
-BLURB_TEXT="Welcome to FIRO Portal, the hub for your apps"
+BLURB_TEXT="FIRO Portal is designed to be customizable, so that you can host apps for your organization. You can change everything on this page from the Home Page settings."
+HERO_TEXT="Welcome to FIRO Portal, the hub for your apps"
 FEATURE_1_HEADING=
 FEATURE_1_BODY=
 FEATURE_1_IMAGE=
