updated to use new changes with new footer and header

--- a/dev.env
+++ b/dev.env
@@ -8,7 +8,7 @@ COPYRIGHT='Copyright © 2024 Aquaveo, LLC'
 CHANNEL_LAYERS_CONFIG="\"{'hosts':[{'host': '127.0.0.1', 'port': 6379}]}\""
 TETHYS_DB_PORT=5437
 TETHYS_DB_HOST=localhost
-ALLOWED_HOSTS="\"[localhost, 127.0.0.1]\""
+ALLOWED_HOSTS="\"[localhost, 127.0.0.1, host.docker.internal]\""
 CSRF_TRUSTED_ORIGINS="\"[http://localhost:8080, http://127.0.0.1:8080]\""
 MULTIPLE_APP_MODE=true
 STANDALONE_APP=tethysdash
@@ -17,7 +17,9 @@ POSTGRES_PASSWORD=pass
 SKIP_DB_SETUP=false
 BYPASS_TETHYS_HOME_PAGE=false
 THEME_NAME=firo_theme
-
+FORCE_SCRIPT_NAME="/site2"
+STATIC_URL="site2/static/"
+MEDIA_URL="site2/media/"
 
 
 #Site config
