updated to tweak prefixes

--- a/dev.env
+++ b/dev.env
@@ -9,7 +9,7 @@ CHANNEL_LAYERS_CONFIG="\"{'hosts':[{'host': '127.0.0.1', 'port': 6379}]}\""
 TETHYS_DB_PORT=5437
 TETHYS_DB_HOST=localhost
 ALLOWED_HOSTS="\"[localhost, 127.0.0.1, host.docker.internal]\""
-CSRF_TRUSTED_ORIGINS="\"[http://localhost:8080, http://127.0.0.1:8080]\""
+CSRF_TRUSTED_ORIGINS="\"[http://localhost:8080, http://127.0.0.1:8080, http://localhost]\""
 MULTIPLE_APP_MODE=true
 STANDALONE_APP=tethysdash
 TETHYSDASH_DB_NAME=tethysdash_primary_db
@@ -20,6 +20,7 @@ THEME_NAME=firo_theme
 FORCE_SCRIPT_NAME="/site2"
 STATIC_URL="site2/static/"
 MEDIA_URL="site2/media/"
+WORKSPACES_URL="site2/workspaces/"
 
 
 #Site config
