--- a/dev.env
+++ b/dev.env
@@ -7,9 +7,9 @@ FILE_UPLOAD_MAX_MEMORY_SIZE=1073741824
 COPYRIGHT='Copyright © 2024 Aquaveo, LLC'
 CHANNEL_LAYERS_CONFIG="\"{'hosts':[{'host': '127.0.0.1', 'port': 6379}]}\""
 TETHYS_DB_PORT=5437
-TETHYS_DB_HOST=localhost
-ALLOWED_HOSTS="\"[localhost, 127.0.0.1, host.docker.internal]\""
-CSRF_TRUSTED_ORIGINS="\"[http://localhost:8080, http://127.0.0.1:8080, http://localhost]\""
+APPTAINERENV_TETHYS_DB_HOST=localhost
+APPTAINERENV_ALLOWED_HOSTS="\"[localhost, 127.0.0.1, host.docker.internal]\""
+APPTAINERENV_CSRF_TRUSTED_ORIGINS="\"[http://localhost:8080, http://127.0.0.1:8080, http://localhost]\""
 MULTIPLE_APP_MODE=true
 STANDALONE_APP=tethysdash
 TETHYSDASH_DB_NAME=tethysdash_primary_db
@@ -17,10 +17,10 @@ POSTGRES_PASSWORD=pass
 SKIP_DB_SETUP=false
 BYPASS_TETHYS_HOME_PAGE=false
 THEME_NAME=firo_theme
-FORCE_SCRIPT_NAME="/site2"
-STATIC_URL="site2/static/"
-MEDIA_URL="site2/media/"
-WORKSPACES_URL="site2/workspaces/"
+APPTAINERENV_FORCE_SCRIPT_NAME=/site2
+APPTAINERENV_STATIC_URL=site2/static/
+APPTAINERENV_MEDIA_URL=site2/media/
+APPTAINERENV_WORKSPACES_URL=site2/workspaces/
 
 
 #Site config
