--- a/dev/load-mods.conf
+++ b/dev/load-mods.conf
@@ -4,4 +4,5 @@ LoadModule proxy_http_module     modules/mod_proxy_http.so
 LoadModule substitute_module     modules/mod_substitute.so
 LoadModule include_module        modules/mod_include.so
 LoadModule headers_module        modules/mod_headers.so
+# LoadModule filter_module         modules/mod_filter.so
 ServerName localhost
