--- a/dev/proxy-vhost.conf
+++ b/dev/proxy-vhost.conf
@@ -4,29 +4,38 @@
     ErrorLog  ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-    # 0  Enable SSI for the proxied location
-    <Location "/site2/">
+    # 0. SSI + filters for every /site2 request
+    <LocationMatch "^/site2(/|$)">
         Options +IncludesNoExec
-    </Location>
+        # run filters in order → first SUBSTITUTE, then INCLUDES
+        SetOutputFilter SUBSTITUTE;INCLUDES
+    </LocationMatch>
 
-    # 1  Reverse proxy
-    RequestHeader set X-Forwarded-Prefix "/site2"
+    # 1. Strip gzip early, advertise prefix, tidy cookies
+    RequestHeader unset Accept-Encoding early
+    RequestHeader set  X-Forwarded-Prefix "/site2"
+    ProxyPassReverseCookiePath "/" "/site2/"
+
+    # 2. Reverse-proxy (slash and no-slash forms)
+    ProxyPass        "/site2"  "http://host.docker.internal:8080/"
+    ProxyPassReverse "/site2"  "http://host.docker.internal:8080/"
     ProxyPass        "/site2/" "http://host.docker.internal:8080/"
     ProxyPassReverse "/site2/" "http://host.docker.internal:8080/"
-    RequestHeader unset Accept-Encoding
 
-    # 2  Static fragments
+    # 3. Expose fragment files
     Alias "/partials/" "/var/www/partials/"
     <Directory "/var/www/partials">
         Options +IncludesNoExec
         Require all granted
     </Directory>
 
-    # 3  Injection filters
-    AddOutputFilterByType SUBSTITUTE text/html
-    AddOutputFilterByType INCLUDES   text/html
-
+    # 4. Substitution rules  (guidelines 1-4)
+    # 4-a  Append <head>-bottom fragment just before </head>
     Substitute "s|</head>|<!--#include virtual='/partials/cw3e_head_bottom.html' --></head>|i"
+
+    # 4-b  Inject the full CW3E header immediately after <body …>
     Substitute "s|<body[^>]*>|$0<!--#include virtual='/partials/cw3e_header.html' -->|ni"
-    Substitute "s|</body>|<!--#include virtual='/partials/cw3e_body_bottom.html' --><!--#include virtual='/partials/cw3e_footer.html' --></body>|i"
+
+    # 4-c  Append body-bottom extras *and* the footer just before </body>
+    Substitute "s|</body>|<!--#include virtual='/partials/cw3e_body_bottom.html' --><!--#include virtual='/partials/cw3e_footer.html' -->\n</body>|i"
 </VirtualHost>
