--- a/dev/proxy-vhost.conf
+++ b/dev/proxy-vhost.conf
@@ -29,13 +29,7 @@
         Require all granted
     </Directory>
 
-    # 4. Substitution rules  (guidelines 1-4)
-    # 4-a  Append <head>-bottom fragment just before </head>
     Substitute "s|</head>|<!--#include virtual='/partials/cw3e_head_bottom.html' --></head>|i"
-
-    # 4-b  Inject the full CW3E header immediately after <body …>
     Substitute "s|<body[^>]*>|$0<!--#include virtual='/partials/cw3e_header.html' -->|ni"
-
-    # 4-c  Append body-bottom extras *and* the footer just before </body>
-    Substitute "s|</body>|<!--#include virtual='/partials/cw3e_body_bottom.html' --><!--#include virtual='/partials/cw3e_footer.html' -->\n</body>|i"
+    Substitute "s|</body>|<!--#include virtual='/partials/cw3e_body_bottom.html' --><!--#include virtual='/partials/cw3e_footer.html' --></body>|i"
 </VirtualHost>
