--- a/docker/env/web.env
+++ b/docker/env/web.env
@@ -1,5 +1,6 @@
 # Domain name of server should be first in the list if multiple entries added
-ALLOWED_HOSTS="\"[localhost]\""
+ALLOWED_HOSTS="\"[localhost, 127.0.0.1 ]\""
+CSRF_TRUSTED_ORIGINS="\"[http://localhost, http://127.0.0.1]\""
 
 # Don't change these parameters
 ASGI_PROCESSES=1
@@ -15,7 +16,7 @@ TETHYS_DB_USERNAME=tethys_default
 TETHYS_DB_PASSWORD=please_dont_use_default_passwords
 TETHYS_DB_SUPERUSER=tethys_super
 TETHYS_DB_SUPERUSER_PASS=please_dont_use_default_passwords
-
+BYPASS_TETHYS_HOME_PAGE=false
 # POSTGRES_PASSWORD should be the same as that in the db.env
 POSTGRES_PASSWORD=please_dont_use_default_passwords
 
@@ -23,6 +24,52 @@ POSTGRES_PASSWORD=please_dont_use_default_passwords
 PORTAL_SUPERUSER_NAME=admin
 PORTAL_SUPERUSER_PASSWORD=please_dont_use_default_passwords
 PORTAL_SUPERUSER_EMAIL=you@email.com
+
+
+SITE_TITLE="FIRO Tethys Portal"
+FAVICON=
+BRAND_TEXT="FIRO Tethys Portal"
+BRAND_IMAGE=
+BRAND_IMAGE_HEIGHT=
+BRAND_IMAGE_WIDTH=
+BRAND_IMAGE_PADDING=
+APPS_LIBRARY_TITLE="Tools"
+PRIMARY_COLOR='#1e6b8b'
+SECONDARY_COLOR='#1e6b8b'
+PRIMARY_TEXT_COLOR='#1e6b8b'
+PRIMARY_TEXT_HOVER_COLOR=
+SECONDARY_TEXT_COLOR=
+SECONDARY_TEXT_HOVER_COLOR=
+BACKGROUND_COLOR='#eaeaea'
+COPYRIGHT="Copyright © 2025 CW3E"
+BLURB_TEXT="FIRO Portal is designed to be customizable, so that you can host apps for your organization. You can change everything on this page from the Home Page settings."
+HERO_TEXT="Welcome to FIRO Portal, the hub for your apps"
+FEATURE_1_HEADING=
+FEATURE_1_BODY=
+FEATURE_1_IMAGE=
+FEATURE_2_HEADING=
+FEATURE_2_BODY=
+FEATURE_2_IMAGE=
+FEATURE_3_HEADING=
+FEATURE_3_BODY=
+FEATURE_3_IMAGE=
+CALL_TO_ACTION=
+CALL_TO_ACTION_BUTTON=
+PORTAL_BASE_CSS=
+HOME_PAGE_CSS=
+APPS_LIBRARY_CSS=
+ACCOUNTS_BASE_CSS=
+LOGIN_CSS=
+REGISTER_CSS=
+USER_BASE_CSS=
+HOME_PAGE_TEMPLATE='default_theme/home.html'
+APPS_LIBRARY_TEMPLATE=
+LOGIN_PAGE_TEMPLATE=
+REGISTER_PAGE_TEMPLATE=
+USER_PAGE_TEMPLATE=
+USER_SETTINGS_PAGE_TEMPLATE=
+
+
 
 # App specific settings
 APP_INSTALLER_USER_EMAIL="you@email.com"
