udpated dev files for injection

--- a/dev/proxy-vhost.conf
+++ b/dev/proxy-vhost.conf
@@ -1,4 +1,12 @@
 <VirtualHost *:80>
+    # Normalize // to / under /site2 and redirect /site2 -> /site2/
+    # RewriteEngine On
+    # Collapse accidental duplicate slashes after /site2/
+    RewriteRule ^/site2//+(.*)$ /site2/$1 [R=301,L]
+
+    ProxyPreserveHost On
+    RequestHeader set X-Forwarded-Proto "http"
+
     ServerAdmin webmaster@localhost
     LogLevel warn
     ErrorLog  ${APACHE_LOG_DIR}/error.log
@@ -13,14 +21,14 @@
 
     # 1. Strip gzip early, advertise prefix, tidy cookies
     RequestHeader unset Accept-Encoding early
-    RequestHeader set  X-Forwarded-Prefix "/site2"
+    # RequestHeader set  X-Forwarded-Prefix "/site2"
     ProxyPassReverseCookiePath "/" "/site2/"
 
     # 2. Reverse-proxy (slash and no-slash forms)
-    ProxyPass        "/site2"  "http://host.docker.internal:8080/"
-    ProxyPassReverse "/site2"  "http://host.docker.internal:8080/"
-    ProxyPass        "/site2/" "http://host.docker.internal:8080/"
-    ProxyPassReverse "/site2/" "http://host.docker.internal:8080/"
+    ProxyPass        "/site2"  "http://host.docker.internal:8080/site2"
+    ProxyPassReverse "/site2"  "http://host.docker.internal:8080/site2"
+    ProxyPass        "/site2/" "http://host.docker.internal:8080/site2"
+    ProxyPassReverse "/site2/" "http://host.docker.internal:8080/site2"
 
     # 3. Expose fragment files
     Alias "/partials/" "/var/www/partials/"
