--- a/dev/load-mods.conf
+++ b/dev/load-mods.conf
@@ -4,5 +4,6 @@ LoadModule proxy_http_module     modules/mod_proxy_http.so
 LoadModule substitute_module     modules/mod_substitute.so
 LoadModule include_module        modules/mod_include.so
 LoadModule headers_module        modules/mod_headers.so
+LoadModule rewrite_module        modules/mod_rewrite.so
 # LoadModule filter_module         modules/mod_filter.so
 ServerName localhost
