added injections better

--- a/dev/proxy-vhost.conf
+++ b/dev/proxy-vhost.conf
@@ -13,11 +13,11 @@
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     # 0. SSI + filters for every /site2 request
-    <LocationMatch "^/site2(/|$)">
-        Options +IncludesNoExec
-        # run filters in order → first SUBSTITUTE, then INCLUDES
-        SetOutputFilter SUBSTITUTE;INCLUDES
-    </LocationMatch>
+    # <LocationMatch "^/site2(/|$)">
+    #     Options +IncludesNoExec
+    #     # run filters in order → first SUBSTITUTE, then INCLUDES
+    #     SetOutputFilter SUBSTITUTE;INCLUDES
+    # </LocationMatch>
 
     # 1. Strip gzip early, advertise prefix, tidy cookies
     RequestHeader unset Accept-Encoding early
@@ -37,7 +37,27 @@
         Require all granted
     </Directory>
 
-    Substitute "s|</head>|<!--#include virtual='/partials/cw3e_head_bottom.html' --></head>|i"
-    Substitute "s|<body[^>]*>|$0<!--#include virtual='/partials/cw3e_header.html' -->|ni"
-    Substitute "s|</body>|<!--#include virtual='/partials/cw3e_body_bottom.html' --><!--#include virtual='/partials/cw3e_footer.html' --></body>|i"
+    # Substitute "s|</head>|<!--#include virtual='/partials/cw3e_head_bottom.html' --></head>|i"
+    # Substitute "s|<body[^>]*>|$0<!--#include virtual='/partials/cw3e_header.html' -->|ni"
+    # Substitute "s|</body>|<!--#include virtual='/partials/cw3e_body_bottom.html' --><!--#include virtual='/partials/cw3e_footer.html' --></body>|i"
+
+    <LocationMatch "^/site2(/|$)">
+        Options +IncludesNoExec
+        # Order matters: first SUBSTITUTE, then INCLUDES
+        SetOutputFilter SUBSTITUTE;INCLUDES
+
+        # Make sure large chunks can be matched
+        SubstituteMaxLineLength 10m
+
+        # 1) Inject just before </head>
+        Substitute "s|</head>|<!--#include virtual='/partials/cw3e_head_bottom.html' --></head>|i"
+
+        # 2) Inject right after <body ...> (use a capture group; avoid $0)
+        Substitute "s|(<body[^>]*>)|\1<!--#include virtual='/partials/cw3e_header.html' -->|i"
+
+        # 3) Inject right before </body>
+        Substitute "s|</body>|<!--#include virtual='/partials/cw3e_body_bottom.html' --><!--#include virtual='/partials/cw3e_footer.html' --></body>|i"
+    </LocationMatch>
+
+
 </VirtualHost>
