--- a/dev.env
+++ b/dev.env
@@ -16,7 +16,7 @@ TETHYSDASH_DB_NAME=tethysdash_primary_db
 POSTGRES_PASSWORD=pass
 SKIP_DB_SETUP=false
 BYPASS_TETHYS_HOME_PAGE=false
-THEME_NAME=firo_theme
+THEME_NAME=default_theme
 APPTAINERENV_PREFIX_URL=/site2
 APPTAINERENV_MEDIA_URL=/site2/media/
 
