updated APPS_LIBRARY_TEMPLATE on dev.env file

--- a/dev.env
+++ b/dev.env
@@ -59,7 +59,7 @@ LOGIN_CSS=
 REGISTER_CSS=
 USER_BASE_CSS=
 HOME_PAGE_TEMPLATE='default_theme/home.html'
-APPS_LIBRARY_TEMPLATE=
+APPS_LIBRARY_TEMPLATE='default_theme/apps_library.html'
 LOGIN_PAGE_TEMPLATE=
 REGISTER_PAGE_TEMPLATE=
 USER_PAGE_TEMPLATE=
