--- a/dev.env
+++ b/dev.env
@@ -7,9 +7,9 @@ FILE_UPLOAD_MAX_MEMORY_SIZE=1073741824
 COPYRIGHT='Copyright © 2024 Aquaveo, LLC'
 CHANNEL_LAYERS_CONFIG="\"{'hosts':[{'host': '127.0.0.1', 'port': 6379}]}\""
 TETHYS_DB_PORT=5437
-APPTAINERENV_TETHYS_DB_HOST=localhost
-APPTAINERENV_ALLOWED_HOSTS="\"[localhost, 127.0.0.1, host.docker.internal]\""
-APPTAINERENV_CSRF_TRUSTED_ORIGINS="\"[http://localhost:8080, http://127.0.0.1:8080, http://localhost]\""
+TETHYS_DB_HOST=localhost
+ALLOWED_HOSTS="\"[localhost, 127.0.0.1, host.docker.internal]\""
+CSRF_TRUSTED_ORIGINS="\"[http://localhost:8080, http://127.0.0.1:8080, http://localhost]\""
 MULTIPLE_APP_MODE=true
 STANDALONE_APP=tethysdash
 TETHYSDASH_DB_NAME=tethysdash_primary_db
@@ -17,8 +17,8 @@ POSTGRES_PASSWORD=pass
 SKIP_DB_SETUP=false
 BYPASS_TETHYS_HOME_PAGE=false
 THEME_NAME=default_theme
-APPTAINERENV_PREFIX_URL=/site2
-APPTAINERENV_MEDIA_URL=/site2/media/
+PREFIX_URL=/site2
+MEDIA_URL=/site2/media/
 
 
 #Site config
