--- a/dev.env
+++ b/dev.env
@@ -19,7 +19,7 @@ BYPASS_TETHYS_HOME_PAGE=false
 THEME_NAME=default_theme
 PREFIX_URL=/site2
 MEDIA_URL=/site2/media/
-
+ENABLE_OPEN_PORTAL=true
 
 #Site config
 SITE_TITLE="FIRO Tethys Portal"
