--- a/dev.env
+++ b/dev.env
@@ -20,6 +20,7 @@ THEME_NAME=default_theme
 PREFIX_URL=/site2
 MEDIA_URL=/site2/media/
 ENABLE_OPEN_PORTAL=true
+DEBUG=true
 
 #Site config
 SITE_TITLE="FIRO Tethys Portal"
