changes to styles and scripts

--- a/dev.env
+++ b/dev.env
@@ -21,6 +21,7 @@ PREFIX_URL=/site2
 MEDIA_URL=/site2/media/
 ENABLE_OPEN_PORTAL=true
 DEBUG=true
+PROXY_USER=
 
 #Site config
 SITE_TITLE="FIRO Tethys Portal"
@@ -32,8 +33,8 @@ BRAND_IMAGE_WIDTH=
 BRAND_IMAGE_PADDING=
 APPS_LIBRARY_TITLE="Tools"
 PRIMARY_COLOR='#1e6b8b'
-SECONDARY_COLOR='#1e6b8b'
-PRIMARY_TEXT_COLOR='#1e6b8b'
+SECONDARY_COLOR=
+PRIMARY_TEXT_COLOR=
 PRIMARY_TEXT_HOVER_COLOR=
 SECONDARY_TEXT_COLOR=
 SECONDARY_TEXT_HOVER_COLOR=
@@ -61,7 +62,7 @@ REGISTER_CSS=
 USER_BASE_CSS=
 HOME_PAGE_TEMPLATE='default_theme/home.html'
 APPS_LIBRARY_TEMPLATE='default_theme/apps_library.html'
-LOGIN_PAGE_TEMPLATE=
-REGISTER_PAGE_TEMPLATE=
+LOGIN_PAGE_TEMPLATE='default_theme/login.html'
+REGISTER_PAGE_TEMPLATE='default_theme/register.html'
 USER_PAGE_TEMPLATE=
 USER_SETTINGS_PAGE_TEMPLATE=
